              parameter to operate on only part of the row/column.
            - Renamed swapColumns() to swapCols().  The old name is kept
              as a deprecated alias.
            - Routine swapRows() is now constant time.
            - The type Matrix<bool> is now wrapped in Python under the name
              MatrixBool.
        Class Matrix2:
            - Added member and global swap() functions.
            - Re-engineered to use std::array internally.  This means
              that the row access functions change their return type
              (but the syntax for the user should stay the same).
              All functions that take a long[2][2] array are now deprecated.
        Class MaxAdmissible:
            - Function enumerate() now returns by value, not by pointer.
        Class ModelLinkGraph:
            - Added a copy assignment operator.
            - Added a move constructor and move assignment operator.
            - Renamed swapContents() to swap(); the old name is now a
              deprecated alias.  Also added a global
              regina::swap(ModelLinkGraph&, ModelLinkGraph&).
            - Routine generateMinimalLinks() now uses a type-safe template-based
              mechanism for its callback function, instead of a function
              pointer with void* arguments, and the callback now takes its
              link by rvalue (not pointer).  Moreover, it no longer receives
              an extra null call once the enumeration has finished.
            - Routines fromPlantri() and flype() now return by value (not
              pointer), and throw exceptions on error instead of returning null.
        Class ModelLinkGraphCells:
            - New typedef ArcIterator, which is returned by begin() and end().
        Class NativeInteger<...>:
            - New do-nothing routines isInfinite() and tryReduce(), for
              compatibility with Integer and LargeInteger.